--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-build</artifactId>
 		<version>2.1.0.BUILD-SNAPSHOT</version>
-		<relativePath/>
+		<!--<relativePath/>-->
 	</parent>
 
 	<groupId>org.springframework.cloud</groupId>
