--- a/spring-cloud-kubernetes-dependencies/pom.xml
+++ b/spring-cloud-kubernetes-dependencies/pom.xml
@@ -23,7 +23,7 @@
 		<artifactId>spring-cloud-dependencies-parent</artifactId>
 		<groupId>org.springframework.cloud</groupId>
 		<version>2.1.0.BUILD-SNAPSHOT</version>
-		<relativePath/>
+		<!--<relativePath/>-->
 	</parent>
 	<artifactId>spring-cloud-kubernetes-dependencies</artifactId>
 	<version>1.0.0.BUILD-SNAPSHOT</version>
