--- a/spring-cloud-kubernetes-dependencies/pom.xml
+++ b/spring-cloud-kubernetes-dependencies/pom.xml
@@ -21,8 +21,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
-		<artifactId>spring-cloud-dependencies-parent</artifactId>
-		<version>2.1.0.BUILD-SNAPSHOT</version>
+                <artifactId>spring-cloud-kubernetes</artifactId>
+                <version>1.0.0.BUILD-SNAPSHOT</version>
 		<!--<relativePath/>-->
 	</parent>
 	<artifactId>spring-cloud-kubernetes-dependencies</artifactId>
